--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,3 +1,9 @@
+# Dependency directories
 node_modules
-# Keep environment variables out of version control
+
+# dotenv environment variable files
 .env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
