--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,11 +5,12 @@ WORKDIR /usr/app
 
 COPY package.json /usr/app/package.json
 COPY pnpm-lock.yaml /usr/app/pnpm-lock.yaml
+RUN npm install -g pnpm
 RUN pnpm install
+RUN pnpm prisma generate
 
 COPY . /usr/app
 
 EXPOSE 3000
 
-RUN pnpm prisma generate
 CMD [ "pnpm", "start" ]
