--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,12 +5,14 @@ WORKDIR /usr/app
 
 COPY package.json /usr/app/package.json
 COPY pnpm-lock.yaml /usr/app/pnpm-lock.yaml
+COPY prisma ./prisma/
 RUN npm install -g pnpm
 RUN pnpm install
-RUN pnpm prisma generate
 
 COPY . /usr/app
 
 EXPOSE 3000
 
-CMD [ "pnpm", "start" ]
+RUN pnpm prisma migrate dev
+
+CMD ["pnpm" ,"prisma","generate", "pnpm", "start" ]
